Foi alterada a imagem de logo da aplicação, e tambem foi criados 2 arquivos DML. Eles são utilizados para popular os bancos Mysql ou Hsqldb na inicialização do sistema.